--- a/tasks/static/css/style.css
+++ b/tasks/static/css/style.css
@@ -37,6 +37,6 @@ input::placeholder {
 }
 
 .btn-danger {
-    background-color: #ffae19;
+    background-color: #fba80e;
     border-color: #e59400;
 }
