--- a/tasks/templates/main/index.html
+++ b/tasks/templates/main/index.html
@@ -23,11 +23,8 @@
                 <input class="btn btn-info" type="submit" name="Create Task">
             </form>
 
-
-            {% for i in tasks %}
+            <a class="btn btn-sm btn-info" href="{% url 'chart' %}" role="button">Chart Page</a> {% for i in tasks %}
             <div class="todo-list">
-
-
                 <div class="item-row">
                     <a class="btn btn-sm btn-info" href="{% url 'update_task' i.id %}" role="button">Update</a>
                     <a class="btn btn-sm btn-danger" href="{% url 'delete' i.id %}" role="button">Delete</a> {% if i.complete == True %}
